<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="textStart"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button2"
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:onClick="onclick"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
        android:text="@string/button2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_toLeftOf="@+id/button2"
        android:onClick="onclick"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:onClick="onclick"
        android:layout_below="@+id/button2"
        android:text="@string/button5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:onClick="onclick"
        android:layout_toLeftOf="@+id/button2"
        android:text="@string/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button5"
        android:onClick="onclick"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignLeft="@+id/button3"
        android:text="@string/button6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:onClick="onclick"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_toLeftOf="@+id/button5"
        android:text="@string/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:onClick="onclick"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignLeft="@+id/button6"
        android:text="@string/button9" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button9"
        android:onClick="onclickoperator"
        android:layout_alignTop="@+id/button11"
        android:text="@string/button12" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button10"
        android:layout_below="@+id/button10"
        android:onClick="onclickequal"
        android:text="@string/button13" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button12"
        android:onClick="onclickoperator"
        android:layout_alignTop="@+id/button14"
        android:text="@string/button15" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onclick"
        android:layout_below="@+id/button8"
        android:layout_toLeftOf="@+id/button9"
        android:text="@string/button10" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:longClickable="true"
        android:onClick="onclickoperator"
        android:layout_toLeftOf="@+id/button8"
        android:text="@string/button11" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button13"
        android:onClick="onclickoperator"
        android:layout_alignBottom="@+id/button13"
        android:layout_alignLeft="@+id/button11"
        android:text="@string/button14" />

   

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:layout_toRightOf="@+id/button2"
        android:onClick="onclick"
        android:text="@string/button3" />

    <Button
        android:id="@+id/button16"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button12"
        android:layout_toRightOf="@+id/button12"
        android:onClick="onclickce"
        android:text="@string/button16" />

    <Button
        android:id="@+id/button17"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button16"
        android:layout_below="@+id/button9"
        android:onClick="onclickc"
        android:text="@string/button17" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button12"
        android:layout_toLeftOf="@+id/button9"
        android:onClick="onclick"
        android:text="@string/button8" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="280dp"
        android:layout_height="30dp"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:background="#e0e0e0"
        android:clickable="false"
        android:textAlignment="textStart"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="#000000" />

</RelativeLayout>